# autocrop

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Params.ods  TODO  evaluate.out  evaluate_Fang_4.out  evaluate_Fang_4_Scontent.out  evaluate_Fang_4_shrinking.out  evaluate_Fang_5.out  evaluate_Fang_5_Scontent.out  evaluate_Fang_5_boundary.out  evaluate_Fang_5_boundary_shrinking.out  evaluate_Fang_5_shrinking.out  setup.sh
chen/: setup.sh
datasets/: get_all_datasets.sh
datasets/Chen/analysis/: drawAllBBox.m  makeGoodCrops.m
datasets/EarthPorn/: get_dataset.py
datasets/Michael/: classifications_dengxin.json  classifications_michael.json  classifications_nerea.json  classifications_phineasng.json  classifications_wookie.json  get_dataset.sh
datasets/Reddit/: get_dataset.py
datasets/Wookie/: classifications_dengxin.json  classifications_michael.json  classifications_nerea.json  classifications_phineasng.json  classifications_wookie.json  get_dataset.sh
figures/: PRcurve_michael_wookie.out  PRcurve_wookie_michael.out  comparison.err  comparison.txt
minutes/: 150224 - Michael+Dengxin  150309 - Dengxin  150316 - Michael+Dengxin  150323 - Michael+Dengxin  150505 - Michael  150522 - Michael+Dengxin  150527 - Michael+Dengxin  150601 - Michael+Dengxin  150617 - Michael+Dengxin  150622 - Michael+Dengxin  150625 - Michael+Dengxin
presentation/: Makefile  main.tex
presentation/include/: ETHpres.cls
references/chen/analysis/: drawBBox.m
references/saliency/: demo.m
references/saliency/benchmark/: candidateAlgStructure.m  exampleRun.m  hitRates.m  performBenchmark.m
report/: Makefile  abstract.tex  ack.tex  appendix.tex  conclusion.tex  discussion.tex  experimentsandresults.tex  intro.tex  main.tex  materialsandmethods.tex  mydefs.sty  qualitative.tex  quantitative.tex  references.bib  relatedwork.tex  report.tex  title.tex
report/chapters/: 00_abstract.aux  01_introduction.aux  02_theory.aux  02_theory.tex
scripts/: autocrop.sh  label_images.py  pipeline.py  run_for_folder.sh  test_classifier.sh  trainer_pipeline.sh  visualise.py
src/: CMakeLists.txt  Makefile  SLIC.cpp  SLIC.hpp  autocrop.cpp  autocrop.hpp  classifier.cpp  constants.hpp  evaluate.cpp  feature.cpp  feature.hpp  get_features.cpp  main.cpp  pipeline.sh  retarget.cpp  retarget.hpp  saliency.cpp  saliency.hpp  train.cpp  train.hpp  trainer.cpp  util.cpp  util.hpp
src/autocrop/: autocrop.cpp  autocrop.hpp  feature.cpp  feature.hpp
src/classifier/: classify.hpp
src/classify/: Classifier.cpp  Classifier.hpp
src/datasets/: Chen.cpp  Chen.hpp  DataSet.hpp  EarthPorn.cpp  EarthPorn.hpp  Reddit.cpp  Reddit.hpp  datasets.cpp  datasets.hpp
src/features/: FeatMat.cpp  FeatMat.hpp  feature.cpp  feature.hpp
src/saliency/: SLIC.cpp  saliency.cpp
src/trainer/: train.cpp  train.hpp
src/training/: Trainer.cpp  Trainer.hpp  train.cpp  train.hpp
src/util/: file.cpp  file.hpp  math.cpp  math.hpp  opencv.cpp  opencv.hpp
suitability/: Classifier.py  FeatMat.py  PR.out  Trainer.py  classify.py  config.py  evaluate.out  evaluate.py  evaluate_fc6.out  evaluate_fc7.out  evaluate_fc8.out  get_features.py  train.py  util.py
